--- a/src/components/pages/homepage/Hero.astro
+++ b/src/components/pages/homepage/Hero.astro
@@ -11,13 +11,12 @@ import DuoDeChoc from "../../DuoDeChoc.astro";
       <h1
         class="col-span-full lg:col-start-2 lg:col-span-9 mb-10 lg:mb-8 text-display-large"
       >
-        Nous sommes Yuna & Daniela, un binôme de <span class="text-primary"
-          >designers UX seniors en freelance</span
+        Nous sommes Yuna & Daniela, <span class="text-primary">l’extension UX de votre équipe produit</span
         >
       </h1>
       <div class="col-span-full lg:col-start-2 lg:col-span-6">
         <p class="our-work mb-5 text-body-large lg:text-body-extra-large">
-          Notre travail est reconnu pour son efficacité et sa pertinence, en
+          Binôme de designers UX seniors, notre travail est reconnu pour son efficacité et sa pertinence, en
           particulier sur les produits numériques dits complexes que nous
           adorons construire ou déconstruire.
         </p>
