--- a/src/components/pages/projets/Hero.astro
+++ b/src/components/pages/projets/Hero.astro
@@ -4,5 +4,5 @@ import CommonPageHero from "../../../components/CommonPageHero.astro";
 
 <CommonPageHero
   title="Nos collaborations"
-  subtitle="Quelques références de projets de design UX, de conception accessible et d’éco-conception."
+  subtitle="Quelques références projets en product design, design UX, conception accessible et éco-conception."
 />
