letter with definition bg

--- a/src/components/pages/glossaire-ux-design/Letter.astro
+++ b/src/components/pages/glossaire-ux-design/Letter.astro
@@ -16,6 +16,7 @@ const cssClasses = [
   "rounded-[4px]",
   {
     "text-neutral2": !hasDefinitions,
+    "bg-neutral4": hasDefinitions,
   },
 ];
 ---
