--- a/src/components/pages/glossaire-ux-design/Glossaire.astro
+++ b/src/components/pages/glossaire-ux-design/Glossaire.astro
@@ -159,9 +159,10 @@ const currentPath = new URL(Astro.url.pathname, Astro.site);
                                 </div>
                               </summary>
                               <div class="flex flex-col gap-8 px-5 py-4 sm:p-8 pt-0">
-                                <p class="text-body-medium">
-                                  {definition.content}
-                                </p>
+                                <p
+                                  class="text-body-medium"
+                                  set:html={definition.content}
+                                />
 
                                 <ButtonCopyText
                                   type="secondary"
