--- a/src/components/pages/glossaire-ux-design/Glossaire.astro
+++ b/src/components/pages/glossaire-ux-design/Glossaire.astro
@@ -158,7 +158,7 @@ const currentPath = new URL(Astro.url.pathname, Astro.site);
                                   />
                                 </div>
                               </summary>
-                              <div class="flex flex-col gap-8 px-5 py-4 sm:p-8 pt-0">
+                              <div class="flex flex-col gap-8 px-5 py-4 sm:px-8 sm:pb-8 pt-0">
                                 <p
                                   class="text-body-medium"
                                   set:html={definition.content}
