cta bold on mobile

--- a/src/components/@common/CallToAction.astro
+++ b/src/components/@common/CallToAction.astro
@@ -41,7 +41,7 @@ const htmlAttributes = {
     {
       "text-label-large": variant !== "transparent" && type === "primary",
       "text-label-medium": variant === "transparent" && type === "secondary",
-      "text-label-medium-bold":
+      "text-label-medium lg:text-label-medium-bold":
         (variant !== "transparent" && type === "secondary") ||
         (variant === "transparent" && type === "primary"),
     },
