--- a/src/components/ButtonCopyText.astro
+++ b/src/components/ButtonCopyText.astro
@@ -56,7 +56,7 @@ const {
 
       try {
         await navigator.clipboard.writeText(textToCopy);
-        await showToast(toastCopySuccessText);
+        await showToast();
       } catch (err) {
         console.error("Failed to copy text:", textToCopy, err);
       } finally {
