--- a/src/components/Toast.astro
+++ b/src/components/Toast.astro
@@ -11,3 +11,48 @@ import Icon from "./@common/Icon.astro";
   <Icon name="check_circle" width={24} height={24} />
   <span class="flex-1"></span>
 </div>
+
+<style>
+  #toast {
+    transform: translateX(-50%) translateY(100%) translateZ(0);
+    animation-duration: 6s;
+    animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
+
+    &.show {
+      animation-name: showToastCopyTextSuccess;
+    }
+
+    &.hide {
+      animation-duration: 300ms;
+      animation-name: hideToastCopyTextSuccess;
+    }
+  }
+
+  @keyframes showToastCopyTextSuccess {
+    0% {
+      transform: translateX(-50%) translateY(0) translateZ(0);
+    }
+
+    10% {
+      transform: translateX(-50%) translateY(calc(-80px - 100%)) translateZ(0);
+    }
+
+    90% {
+      transform: translateX(-50%) translateY(calc(-80px - 100%)) translateZ(0);
+    }
+
+    100% {
+      transform: translateX(-50%) translateY(0) translateZ(0);
+    }
+  }
+
+  @keyframes hideToastCopyTextSuccess {
+    from {
+      transform: translateX(-50%) translateY(calc(-80px - 100%)) translateZ(0);
+    }
+
+    to {
+      transform: translateX(-50%) translateY(0) translateZ(0);
+    }
+  }
+</style>
