mobile header bg

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -32,7 +32,9 @@ const backgroundFormCSSClasses = showBackgroundForm
   <div id="contact" class="container">
     <Grid>
       <div class="col-span-full 2xl:col-start-2 2xl:col-span-8">
-        <div class="relative px-5 py-10 2xl:p-14 bg-surface3 rounded-[26px]">
+        <div
+          class="relative px-5 pb-10 pt-9 2xl:p-14 bg-surface3 rounded-[26px]"
+        >
           {
             showBackgroundForm && (
               <BackgroundForm1 class="hidden 2xl:block absolute z-[-1] top-[-205px] right-[-860px]" />
@@ -49,7 +51,7 @@ const backgroundFormCSSClasses = showBackgroundForm
           />
 
           <h2
-            class="mb-14 2xl:mb-6 text-headline-small 2xl:text-headline-medium"
+            class="mb-10 2xl:mb-6 text-headline-small 2xl:text-headline-medium"
           >
             Envie de travailler avec nous ?
           </h2>
