--- a/src/components/Header/index.astro
+++ b/src/components/Header/index.astro
@@ -16,7 +16,7 @@ const currentPath = Astro.url.pathname.replaceAll("/", "");
   <div class="outer isolate">
     <div
       id="mobile-menu"
-      class="hidden overflow-y-auto fixed top-[84px] w-full h-[calc(100%-84px)] px-5 pb-5 pt-9 bg-surface2"
+      class="hidden overflow-y-auto overflow-x-hidden fixed top-[84px] w-full h-[calc(100%-84px)] px-5 pb-5 pt-9 bg-surface2"
     >
       <nav role="navigation">
         <ul>
@@ -170,6 +170,12 @@ const currentPath = Astro.url.pathname.replaceAll("/", "");
     }
   }
 
+  header:not([data-menu-opened="true"]) .outer {
+    animation: mobile-sticky-bg-white-header 1ms linear forwards;
+    animation-timeline: scroll();
+    animation-range: 0px 1px;
+  }
+
   #mobile-menu {
     :global([astro-icon="arrow_drop_down"]) {
       @apply text-primary;
@@ -217,13 +223,25 @@ const currentPath = Astro.url.pathname.replaceAll("/", "");
 
     .outer {
       border-radius: 0 0 16px 16px;
-      animation: sticky-bg-white-header 1s linear forwards;
+
+      animation: desktop-sticky-bg-white-header 1ms linear forwards;
       animation-timeline: scroll();
       animation-range: 0px 1px;
     }
   }
 
-  @keyframes sticky-bg-white-header {
+  @keyframes mobile-sticky-bg-white-header {
+    from {
+      background: rgba(255, 255, 255, 0);
+    }
+
+    to {
+      background: rgba(255, 255, 255, 1);
+      box-shadow: 0px 2px 4px 0px rgba(8, 18, 79, 0.25);
+    }
+  }
+
+  @keyframes desktop-sticky-bg-white-header {
     from {
       background: rgba(255, 255, 255, 0);
     }
