--- a/src/components/Header/index.astro
+++ b/src/components/Header/index.astro
@@ -4,14 +4,12 @@ import Logo from "./Logo.astro";
 import NavItemContact from "./NavItemContact.astro";
 import NavItem from "./components/NavItem.astro";
 import NavItems from "./NavItems.astro";
-
-const currentPath = Astro.url.pathname.replaceAll("/", "");
 ---
 
 <header
   id="header"
   data-menu-opened="false"
-  class="container sticky z-10 top-0"
+  class="container sticky z-10 top-0 text-headline-large"
 >
   <div class="outer isolate">
     <div
@@ -19,50 +17,31 @@ const currentPath = Astro.url.pathname.replaceAll("/", "");
       class="hidden overflow-y-auto overflow-x-hidden fixed top-[84px] w-full h-[calc(100%-84px)] px-5 pb-5 pt-9 bg-surface2"
     >
       <nav role="navigation">
-        <ul>
+        <ul class="flex flex-col gap-8">
           <li>
             <NavItem to="/">Accueil</NavItem>
           </li>
           <li>
-            <details
-              open={currentPath.match(/(projets|temoignages)/)
-                ? "true"
-                : undefined}
-            >
-              <summary>
-                Références
-                <Icon name="arrow_drop_down" width={30} height={30} />
-              </summary>
-
-              <ul>
-                <li>
-                  <NavItem to="/projets">Projets</NavItem>
-                </li>
-                <li>
-                  <NavItem to="/temoignages">Témoignages</NavItem>
-                </li>
-              </ul>
-            </details>
+            <span class="block pb-5">Références</span>
+            <ul class="flex flex-col gap-8">
+              <li>
+                <NavItem to="/projets">Projets</NavItem>
+              </li>
+              <li>
+                <NavItem to="/temoignages">Témoignages</NavItem>
+              </li>
+            </ul>
           </li>
           <li>
-            <details
-              open={currentPath.match(/(nos-deux-profils|notre-manifeste)/)
-                ? "true"
-                : undefined}
-            >
-              <summary>
-                Team UX
-                <Icon name="arrow_drop_down" width={30} height={30} />
-              </summary>
-              <ul>
-                <li>
-                  <NavItem to="/nos-deux-profils">Nos 2 profils</NavItem>
-                </li>
-                <li>
-                  <NavItem to="/notre-manifeste">Notre manifeste</NavItem>
-                </li>
-              </ul>
-            </details>
+            <span class="block pb-5">Team UX</span>
+            <ul class="flex flex-col gap-8">
+              <li>
+                <NavItem to="/nos-deux-profils">Nos 2 profils</NavItem>
+              </li>
+              <li>
+                <NavItem to="/notre-manifeste">Notre manifeste</NavItem>
+              </li>
+            </ul>
           </li>
         </ul>
       </nav>
@@ -182,26 +161,8 @@ const currentPath = Astro.url.pathname.replaceAll("/", "");
     }
 
     ul {
-      display: flex;
-      flex-direction: column;
-      gap: 15px;
-
       & ul {
         margin-left: 70px;
-      }
-    }
-
-    summary {
-      @apply flex items-center gap-2;
-
-      padding-block: 16px;
-      font-size: 24px;
-      line-height: normal;
-    }
-
-    details[open] {
-      :global([astro-icon="arrow_drop_down"]) {
-        transform: scaleY(-1);
       }
     }
   }
