--- a/src/components/@common/Tag.astro
+++ b/src/components/@common/Tag.astro
@@ -7,7 +7,7 @@ const { name } = Astro.props;
 ---
 
 <span
-  class="inline-block px-3 py-1.5 text-label-small text-neutral1 whitespace-normal 2xl:whitespace-nowrap bg-surface1 rounded-lg"
+  class="inline-block px-3 py-1.5 text-label-medium 2xl:text-label-small text-neutral1 whitespace-normal 2xl:whitespace-nowrap bg-surface1 rounded-lg"
 >
   {name}
 </span>
