project picture legend

--- a/src/components/pages/projets/AllProjects/LargeProject/index.astro
+++ b/src/components/pages/projets/AllProjects/LargeProject/index.astro
@@ -163,7 +163,7 @@ const hasManyTestimonials = Array.isArray(project.testimonial);
             <p class="text-neutral1 text-body-small">
               Dans une <a href="/demarche-eco-conception" class="text-primary underline underline-offset-[4px] hover:text-secondary">démarche d’éco-responsabilité</a>, nous vous proposons de
               n’ouvrir
-              <br />
+              <br class="hidden lg:block" />
               que les galeries et visuels dont vous avez besoin.
             </p>
           </div>
