small projects spacing

--- a/src/components/pages/projets/AllProjects/index.astro
+++ b/src/components/pages/projets/AllProjects/index.astro
@@ -94,7 +94,7 @@ import SmallProject from "./SmallProject.astro";
               )}
 
               <Grid>
-                <ul class="col-span-full 2xl:col-start-2 2xl:col-span-10 2xl:columns-2 2xl:gap-8 space-y-2.5 2xl:space-y-5">
+                <ul class="col-span-full 2xl:col-start-2 2xl:col-span-10 2xl:columns-2 2xl:gap-8 space-y-5">
                   {projectsGroup.projects.map((project) => {
                     return (
                       <li>
