--- a/public/css/print.css
+++ b/public/css/print.css
@@ -1,31 +1,1 @@
-#toast,
-#header,
-#footer,
-img,
-.bg-form {
-  display: none !important;
-}
-
-* {
-  color: black !important;
-}
-
-svg {
-  fill: black !important;
-}
-
-.call-to-action {
-  text-decoration: underline !important;
-}
-
-.call-to-action:not(.transparent) {
-  display: none !important;
-}
-
-[aria-label="Breadcrumb"] {
-  display: none;
-}
-
-.project .gallery {
-  display: none !important;
-}
+#footer,#header,#toast,.bg-form,.call-to-action:not(.transparent),.project .gallery,img{display:none!important}*{color:#000!important}svg{fill:black!important}.call-to-action{text-decoration:underline!important}[aria-label=Breadcrumb]{display:none}
