Update catch phrase

--- a/src/components/pages/homepage/Hero.astro
+++ b/src/components/pages/homepage/Hero.astro
@@ -11,8 +11,8 @@ import DuoDeChoc from "../../DuoDeChoc.astro";
       <h1
         class="col-span-full lg:col-start-2 lg:col-span-9 mb-10 lg:mb-8 text-display-large"
       >
-        Nous sommes Yuna & Daniela, <span class="text-primary">l’extension UX de votre équipe produit</span
-        >
+        Nous sommes Yuna & Daniela, <span class="text-primary">l’extension UX freelance</span
+        > de votre équipe produit
       </h1>
       <div class="col-span-full lg:col-start-2 lg:col-span-6">
         <p class="our-work mb-5 text-body-large lg:text-body-extra-large">
