--- a/src/components/pages/homepage/Hero.astro
+++ b/src/components/pages/homepage/Hero.astro
@@ -16,7 +16,7 @@ import DuoDeChoc from "../../DuoDeChoc.astro";
       </h1>
       <div class="col-span-full lg:col-start-2 lg:col-span-6">
         <p class="our-work mb-5 text-body-large lg:text-body-extra-large">
-          Binôme de designers UX seniors, notre travail est reconnu pour son efficacité et sa pertinence, en
+          Binôme de designers UX/UI seniors, notre travail est reconnu pour son efficacité et sa pertinence, en
           particulier sur les produits numériques dits complexes que nous
           adorons construire ou déconstruire.
         </p>
