--- a/src/components/Header/index.astro
+++ b/src/components/Header/index.astro
@@ -4,17 +4,62 @@ import Logo from "./Logo.astro";
 import NavItemContact from "./NavItemContact.astro";
 import NavItem from "./components/NavItem.astro";
 import NavItems from "./NavItems.astro";
+import Grid from "../@common/Grid.astro";
 ---
 
-<header
-  id="header"
-  data-menu-opened="false"
-  class="container sticky z-10 top-0"
->
-  <div class="outer isolate">
+<header id="header" data-menu-opened="false" class="sticky z-10 top-0">
+  <div class="outer isolate py-5 lg:px-10 lg:py-0">
+    <div class="container">
+      <Grid>
+        <div
+          class="col-span-full relative z-10 flex items-center justify-between lg:px-0 lg:py-[22px]"
+        >
+          <Logo />
+
+          <nav role="navigation" class="hidden lg:block">
+            <ul class="flex items-center gap-10">
+              <li>
+                <NavItem to="/">Accueil</NavItem>
+              </li>
+              <li>
+                <NavItems
+                  title="Références"
+                  items={[
+                    { title: "Projets", pathname: "/projets" },
+                    { title: "Témoignages", pathname: "/temoignages" },
+                  ]}
+                />
+              </li>
+              <li>
+                <NavItems
+                  title="Team UX"
+                  items={[
+                    { title: "Nos 2 profils", pathname: "/nos-deux-profils" },
+                    { title: "Notre manifeste", pathname: "/notre-manifeste" },
+                  ]}
+                />
+              </li>
+              <li>
+                <NavItemContact />
+              </li>
+            </ul>
+          </nav>
+
+          <button
+            id="menu-opener"
+            class="lg:hidden flex items-center gap-4 px-[15px] py-[11px] text-label-medium text-neutral4 bg-primary rounded-md"
+          >
+            <span class="text-closed">Menu</span>
+            <span class="text-opened">Fermer</span>
+            <Icon name="cross" width={26} height={20} />
+            <Icon name="hamburger" width={26} height={20} />
+          </button>
+        </div>
+      </Grid>
+    </div>
     <div
       id="mobile-menu"
-      class="hidden overflow-y-auto overflow-x-hidden fixed top-[84px] w-full h-[calc(100%-84px)] px-5 pb-5 pt-9 bg-surface2"
+      class="hidden overflow-y-auto overflow-x-hidden fixed top-[84px] left-0 w-full h-[calc(100%-84px)] px-5 pb-5 pt-9 bg-surface2"
     >
       <nav role="navigation" class="text-headline-large">
         <ul class="flex flex-col gap-8">
@@ -52,51 +97,6 @@ import NavItems from "./NavItems.astro";
           >hello@team-ux.com</a
         >
       </p>
-    </div>
-
-    <div
-      class="relative z-10 flex items-center justify-between p-5 lg:px-10 lg:py-[22px]"
-    >
-      <Logo />
-
-      <nav role="navigation" class="hidden lg:block">
-        <ul class="flex items-center gap-10">
-          <li>
-            <NavItem to="/">Accueil</NavItem>
-          </li>
-          <li>
-            <NavItems
-              title="Références"
-              items={[
-                { title: "Projets", pathname: "/projets" },
-                { title: "Témoignages", pathname: "/temoignages" },
-              ]}
-            />
-          </li>
-          <li>
-            <NavItems
-              title="Team UX"
-              items={[
-                { title: "Nos 2 profils", pathname: "/nos-deux-profils" },
-                { title: "Notre manifeste", pathname: "/notre-manifeste" },
-              ]}
-            />
-          </li>
-          <li>
-            <NavItemContact />
-          </li>
-        </ul>
-      </nav>
-
-      <button
-        id="menu-opener"
-        class="lg:hidden flex items-center gap-4 px-[15px] py-[11px] text-label-medium text-neutral4 bg-primary rounded-md"
-      >
-        <span class="text-closed">Menu</span>
-        <span class="text-opened">Fermer</span>
-        <Icon name="cross" width={26} height={20} />
-        <Icon name="hamburger" width={26} height={20} />
-      </button>
     </div>
   </div>
 </header>
@@ -177,6 +177,7 @@ import NavItems from "./NavItems.astro";
     }
 
     .outer {
+      margin-inline: 9px;
       border-radius: 0 0 16px 16px;
     }
   }
